--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="app"></div>
-    <script src="index.ts" type="text/javascript"></script>
+    <script src="index.tsx" type="text/javascript"></script>
 </body>
 
 </html>
